Fixed footer not showing background.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-color: rgb(114, 114, 114);
     background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52),rgba(137, 79, 156, 0.73)),
      url(../images/pexels.jpg);
-     margin-bottom: 100px;
+     margin-bottom: 300px;
 }
 
 .container {
